--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 /backend/node_modules
+/backend/package-lock.json
+/backend/.env
+/backend/src/alegra6ser
+/backend/src/privatekey.ts
 /frontend/node_modules
+/frontend/package-lock.json
+
