--- a/backend/package.json
+++ b/backend/package.json
@@ -3,17 +3,33 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type":"module",
   "scripts": {
-    "start": "nodemon index",
+    "start": "nodemon",
     "test": "node index"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/connect-redis": "^0.0.23",
+    "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
+    "@types/redis": "^4.0.11",
+    "@types/ssh2": "^1.11.19",
+    "@types/tunnel-ssh": "^5.0.4",
+    "connect-redis": "^7.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "express-session": "^1.18.0",
+    "ioredis": "^5.3.2",
     "nodemon": "^3.1.0",
-    "socket.io": "^4.7.4"
+    "redis": "^4.6.13",
+    "socket.io": "^4.7.4",
+    "tunnel-ssh": "^5.1.2"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.24",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
