--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,8 @@
     "@types/connect-redis": "^0.0.23",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
+    "@types/multer": "^1.4.11",
+    "@types/nodemailer": "^6.4.14",
     "@types/redis": "^4.0.11",
     "@types/ssh2": "^1.11.19",
     "@types/tunnel-ssh": "^5.0.4",
@@ -22,6 +24,8 @@
     "express": "^4.18.3",
     "express-session": "^1.18.0",
     "ioredis": "^5.3.2",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
     "redis": "^4.6.13",
     "socket.io": "^4.7.4",
