--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "express": "^4.18.3",
     "express-session": "^1.18.0",
     "ioredis": "^5.3.2",
+    "mongodb": "^6.5.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
