--- a/backend/package.json
+++ b/backend/package.json
@@ -10,20 +10,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/connect-redis": "^0.0.23",
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.11",
     "@types/nodemailer": "^6.4.14",
     "@types/redis": "^4.0.11",
     "@types/ssh2": "^1.11.19",
     "@types/tunnel-ssh": "^5.0.4",
+    "bcrypt": "^5.1.1",
     "connect-redis": "^7.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-session": "^1.18.0",
     "ioredis": "^5.3.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.5.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.13",
