--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/connect-redis": "^0.0.23",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.21",
@@ -22,6 +23,7 @@
     "@types/ssh2": "^1.11.19",
     "@types/tunnel-ssh": "^5.0.4",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "connect-redis": "^7.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
