--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,8 +5,9 @@
     "target": "ES2020",
     "baseUrl": "src",
     "outDir": "dist",
+    // "rootDir": ".",
     "sourceMap": true,
     "noImplicitAny": true,
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "public/*"],
 }
