--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,12 @@
 /backend/package-lock.json
 /backend/.env
 /backend/dist
-/backend/src/alegra6ser
-/backend/src/privatekey.ts
+
+/backend_mySQL/node_modules
+/backend_mySQL/package-lock.json
+/backend_mySQL/.env
+/backend_mySQL/dist
+
 /frontend/node_modules
 /frontend/package-lock.json
 /frontend/dist
